# jyotish-backend

./: .gitignore  README.md  debug_script.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: geo.py  kundli.py
app/core/: cache.py  config.py
app/engine/core/: calculators.py  ephemeris.py  panchang.py  time_astronomy.py  vedic_attributes.py
app/engine/dasha/: vimshottari.py
app/models/: dasha.py  kundli.py
app/service/: geo_service.py  kundli_service.py
scripts/: download_ephe.py
tests/: test_api.py  test_calculations.py  test_sidereal_houses.py
ui/: README.md  package-lock.json  package.json
ui/src/: App.css  App.jsx
ui/src/components/: BirthInput.jsx  DashaDisplay.jsx  KundliChart.jsx  KundliDetails.jsx  PlanetTable.jsx
